# SuperClock

./: .env.example  .gitignore  CLAUDE.md  CLOCK_SPECS.txt  README.md  eslint.config.js  index.html  package-lock.json  package.json  server.ts  vite.config.ts
.claude/: launch.json
admin/: index.html
config/: fleet.example.json
directive/: foundation.md
docs/: architecture.md
docs/admin/: foundation.md  plan.md
docs/radar/: a121-integration.md
docs/site/: .gitignore  README.md  build.js  capture.cjs  data.js  index.src.html
docs/superpowers/plans/: 2026-06-12-night-mode.md  2026-07-19-calendar-app-views.md
docs/superpowers/reviews/: 2026-07-16-fable5-health-report.md
docs/superpowers/specs/: 2026-05-21-bulletproof-clock-hands-and-minimalismo-design.md  2026-06-12-night-mode-design.md  2026-07-19-calendar-app-views-design.md  2026-07-21-roundlist-and-todo-design.md
mac-daemon/claude-usage/: README.md  com.superclock.claude-usage.plist  install.sh  uninstall.sh  usage-server.mjs
scripts/: a121_sidecar.py  deploy.sh  kiosk.sh  setup-pi.sh  superclock-server.service  superclock.service
server/: admin-routes.ts  admin-token.ts  api-mount.ts  claude-usage-proxy.ts  device-push.ts  device-routes.ts  display-adapter.ts  fleet-store.test.ts  fleet-store.ts  github-proxy.ts  handlers.calendar.test.ts  handlers.ts  resolve-device.ts
server/occupancy/: service.ts
server/radar/: driver.ts  protocol.ts  routes.ts  service.ts
slow-native/: CMakeLists.txt  README.md  lv_conf.h
slow-native/scripts/: deploy-from-mac.sh  setup-pi.sh  superclock-native.service
slow-native/src/: clock_face.c  clock_face.h  http_api.c  http_api.h  main.c  night_window.c  night_window.h  weather_widget.c  weather_widget.h
slow-native/tests/: test_night_window.c
square-superclock/: device.json
src/: App.tsx  index.css
src/admin/: App.tsx  index.css  main.tsx
src/admin/components/: ComplicationPicker.tsx  DeviceSwitcher.tsx  FaceCard.tsx  FaceGalleryCard.tsx  NavTabs.tsx  PlaylistRow.tsx  SlotGrid.tsx
src/admin/lib/: api.ts  query.ts  schema-form.tsx
src/admin/routes/: AppDetail.tsx  Apps.tsx  Dashboard.tsx  FaceConfig.tsx  FaceGallery.tsx  Playlist.tsx  Settings.tsx  Setup.tsx
src/admin/store/: active-device.ts
src/api/: types.ts
src/apps/: index.ts
src/apps/breathing/: BreathingApp.tsx  index.ts
src/apps/calendar/: BackChevron.tsx  CalendarApp.tsx  DetailsView.tsx  MonthView.tsx  WeekView.tsx  calendar-utils.test.ts  calendar-utils.ts  index.ts  useCalendarEvents.ts
src/apps/claude-usage/: ClaudeUsageApp.tsx  ClawdSprite.tsx  index.ts  sprites.ts  useClaudeUsage.ts  useMood.ts
src/apps/clock/: AnalogClock.tsx  ClockApp.tsx  ComplicationsDark.tsx  ComplicationsLight.tsx  FlipClock.tsx  FloralClock.tsx  MinimalismoClock.tsx  ProductivityClock.tsx  SquareClock.tsx  WorldClock.tsx  face-components.ts  handPoints.ts  index.ts
src/apps/fireplace/: FireplaceApp.tsx  index.ts
src/apps/fitness/: FitnessApp.tsx  index.ts
src/apps/github/: GithubApp.tsx  index.ts
src/apps/habits/: HabitsApp.tsx  index.ts
src/apps/photo-frame/: PhotoFrameApp.tsx  index.ts
src/apps/quote/: QuoteApp.tsx  index.ts  quotes.ts
src/apps/time-tracking/: TimeTrackingApp.tsx  index.ts
src/apps/weather/: WeatherApp.tsx  index.ts
src/core/: apply-settings.ts  device-config.ts  navigation.test.ts  navigation.ts  playlist.ts  radar.ts  registry.ts  types.ts
src/core/components/: AppGrid.tsx  PresenceShade.tsx  Settings.tsx  SettingsPanel.tsx  SwipeContainer.tsx
src/core/hooks/: useClockHands.ts  useContinuousSecondAngle.ts  useGestures.ts
src/shared/: capabilities.ts  complication-registry.ts  device-config-schema.ts  face-registry.ts  local-config.ts  occupancy.ts  radar.ts  registry-coherence.test.ts  schema-registry.ts  time-window.test.ts  time-window.ts  types.ts
src/shared/complications/: Date.tsx  Temperature.tsx
src/shared/schemas/: app.breathing.ts  app.calendar.ts  app.claude-usage.ts  app.fireplace.ts  app.fitness.ts  app.github.ts  app.habits.ts  app.photo-frame.ts  app.quote.ts  app.time-tracking.ts  app.weather.ts  (+10 more)
superclock/: device.json
superclock-fast/: device.json
superclock-slow/: device.json
superclock-small/: device.json
superclock-square/: device.json
(+4 files in other folders)
